tests/toylang/pos/000107_cdrc2.toylang
program a = { if 0 then { }; } .
