tests/toylang/neg/001189_mutation.toylang
program a = { program a = { } . = a; } .
